La til to headers

--- a/p1.html
+++ b/p1.html
@@ -2,9 +2,16 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title></title>
+    <title> P1 Project Requirements
+    </title>
   </head>
   <body>
+    <h1>
+      P1 Project Requirements
+    </h1>
+    <h2>
+      En nettside av David, Eskild, Hans Kristian, Sander
+    </h2>
     <!--Kake-->
   </body>
 </html>
