--- a/p1.html
+++ b/p1.html
@@ -2,21 +2,45 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-<<<<<<< HEAD
-    <title> P1 Project Requirements
-    </title>
-=======
-    <link rel="stylesheet" href="/style.css">
+    <link rel="stylesheet" href="style.css">
     <title></title>
->>>>>>> f831596ae94f6acbbc346f9a056ee29008ed8a5c
   </head>
   <body>
-    <h1>
-      P1 Project Requirements
-    </h1>
-    <h2>
-      En nettside av David, Eskild, Hans Kristian, Sander
-    </h2>
     <!--Kake-->
+<h2>
+  2.Administratitive detaljer
+</h2>
+<p>
+  Klient: Jonas Eide, PR-sjef i Naborevyen.
+  Naborevyen er en studentrevy som hvert år arrangeres av Spanskrøret og Timini, linjeforeningene til Lektorutdanning med Realfag og Nanoteknologi henholdsvis. Styret i Naborevyen ønsker en nettside de kan bruke til promotering og informasjonsflyt for interesserte partier og interne medlemmer. PR-sjefen har blitt satt opp med ansvaret for å være vår primære klient, ettersom vårt prosjekt går innenfor hans arbeid med promotering av revyen.
+</p>
+
+<h2>
+  3.Formål og mål
+</h2>
+<p>
+</p>
+
+<h2>
+  4.Målgruppe
+</h2>
+<p>
+</p>
+
+<h2>5.Innhold og organisering
+</h2>
+<p>
+</p>
+
+<h2>6. Funksjonelle og ikke funksjonelle krav
+</h2>
+<p>
+</p>
+
+<h2> 7.Avsluttende opplastning
+</h2>
+<p>
+</p>
+
   </body>
 </html>
