Legger til dato

--- a/p1.html
+++ b/p1.html
@@ -17,6 +17,9 @@
     <h2>
       En nettside av David, Eskild, Hans Kristian, Sander
     </h2>
+    <p1>
+      18. September 2019
+    </p1>
     <!--Kake-->
   </body>
 </html>
