--- a/p1.html
+++ b/p1.html
@@ -3,29 +3,47 @@
   <head>
     <meta charset="utf-8">
     <link rel="stylesheet" href="style.css">
-
     <title> P1 Project Requirements</title>
   </head>
   <body>
+
+    <h1>
+      P1 Project Requirements
+    </h1>
+    <h2>
+      En nettside av David, Eskild, Hans Kristian, Sander
+    </h2>
+    <p1>
+      18. September 2019
+    </p1>
+
     <!--Kake-->
 <h2>
   2.Administratitive detaljer
 </h2>
 <p>
   Klient: Jonas Eide, PR-sjef i Naborevyen.
-  Naborevyen er en studentrevy som hvert år arrangeres av Spanskrøret og Timini, linjeforeningene til Lektorutdanning med Realfag og Nanoteknologi henholdsvis. Styret i Naborevyen ønsker en nettside de kan bruke til promotering og informasjonsflyt for interesserte partier og interne medlemmer. PR-sjefen har blitt satt opp med ansvaret for å være vår primære klient, ettersom vårt prosjekt går innenfor hans arbeid med promotering av revyen.
+  Naborevyen er en studentrevy som hvert år arrangeres av Spanskrøret og Timini, linjeforeningene til Lektorutdanning med Realfag og Nanoteknologi henholdsvis.
+  Styret i Naborevyen ønsker en nettside de kan bruke til promotering og informasjonsflyt for interesserte partier og interne medlemmer. PR-sjefen har blitt satt opp med ansvaret for å være vår primære klient, ettersom vårt prosjekt går innenfor hans arbeid med promotering av revyen.
 </p>
 
 <h2>
   3.Formål og mål
 </h2>
 <p>
+  Sidens formål er å gi Naborevyen sin egen offisielle nettside hvor de kan gi ut informasjon og promotere seg selv på.
+   Målet med denne siden er 3-delt.
+   Første punkt er å gi en følelse av profesjonalitet til Naborevyen, for eksempel, i situasjoner hvor de ønsker at relevante partier skal se på revyen som et seriøst foretak av studenter kan det å ha en egen nettside være en fordel, som et bevis på legitimiteten.
+   Andre punkt er å tilby en side hvor ethvert interessert parti kan finne all relevant informasjon om Naborevyen, som kontaktinformasjon til nøkkelpersoner, beskrivelser av gruppene i revyen, link til påmelding og viktige datoer å holde av. Tredje punkt er gi muligheten for Naborevyen å selv i større grad kontrollere hvordan de presenterer seg selv, f.eks. i farger, logoer og kalender, og å gi en mer oversiktelig måte å presentere dette enn hva Facebook tillater.
 </p>
 
 <h2>
   4.Målgruppe
 </h2>
 <p>
+  Målgruppen for nettsiden er todelt, men vil bestå av alle de som er interesserte i Naborevyen og hva revyen gjør.
+  Den ene målgruppen er de studenter som allerede er med i revyen eller de som kan tenke seg å bli med i den. Disse trenger informasjon om hva revyen gjør og når de gjør det, samt hvilke muligheter man får ved å bli med i revyen. Dette vil si et overblikk over sosiale arrangementer og undergrupper som revyens medlemmer kan bli med på. Denne målgruppen er	 de som trenger kalender og antageligvis de som kommer til å bruke siden mest. 
+  Den andre målgruppen er alle andre som er interesserte i naborevyen og å komme på revyforestillingene. Denne målgruppen trenger å vite informasjon om naborevyen generelt, informasjon om revyoppsetningene og hvordan revygruppen har jobbet opp mot de i gjennom semesteret. De trenger også å finne billettinformasjon her.
 </p>
 
 <h2>5.Innhold og organisering
@@ -41,9 +59,6 @@
 <h2> 7.Avsluttende opplastning
 </h2>
 <p>
-Siden skal lastes opp på Naboreyens eget domene, naborevyen.no, som betjenes av de.
-Siden vil også “hostes” på NTNU sin server til prosjektet er vurdert, under urlen: 
-
 </p>
 
   </body>
