Fjerde gangen må det skje!

--- a/p1.html
+++ b/p1.html
@@ -3,31 +3,10 @@
   <head>
     <meta charset="utf-8">
     <link rel="stylesheet" href="style.css">
-<<<<<<< HEAD
-=======
-<<<<<<< HEAD
-=======
-    <title></title>
->>>>>>> 065062f1193c734c2fd3f895e0008d4bd3ba7458
-=======
-    <link rel="stylesheet" href="/style.css">
->>>>>>> af16d1676d2e75dfde95a8e45840089d6bb1a46e
->>>>>>> 720e55315041e6b992d380efb0d2fd212942bd62
+
     <title> P1 Project Requirements</title>
   </head>
   <body>
-<<<<<<< HEAD
-    <h1>
-      P1 Project Requirements
-    </h1>
-    <h2>
-      En nettside av David, Eskild, Hans Kristian, Sander
-    </h2>
-    <p1>
-      18. September 2019
-    </p1>
-=======
->>>>>>> 720e55315041e6b992d380efb0d2fd212942bd62
     <!--Kake-->
 <h2>
   2.Administratitive detaljer
@@ -54,7 +33,7 @@
 <p>
 </p>
 
-<h2>6. Funksjonelle og ikke funksjonelle krav 
+<h2>6. Funksjonelle og ikke funksjonelle krav
 </h2>
 <p>
 </p>
@@ -62,6 +41,9 @@
 <h2> 7.Avsluttende opplastning
 </h2>
 <p>
+Siden skal lastes opp på Naboreyens eget domene, naborevyen.no, som betjenes av de.
+Siden vil også “hostes” på NTNU sin server til prosjektet er vurdert, under urlen: 
+
 </p>
 
   </body>
