--- a/p1.html
+++ b/p1.html
@@ -42,23 +42,51 @@
 </h2>
 <p>
   Målgruppen for nettsiden er todelt, men vil bestå av alle de som er interesserte i Naborevyen og hva revyen gjør.
-  Den ene målgruppen er de studenter som allerede er med i revyen eller de som kan tenke seg å bli med i den. Disse trenger informasjon om hva revyen gjør og når de gjør det, samt hvilke muligheter man får ved å bli med i revyen. Dette vil si et overblikk over sosiale arrangementer og undergrupper som revyens medlemmer kan bli med på. Denne målgruppen er	 de som trenger kalender og antageligvis de som kommer til å bruke siden mest. 
+  Den ene målgruppen er de studenter som allerede er med i revyen eller de som kan tenke seg å bli med i den. Disse trenger informasjon om hva revyen gjør og når de gjør det, samt hvilke muligheter man får ved å bli med i revyen. Dette vil si et overblikk over sosiale arrangementer og undergrupper som revyens medlemmer kan bli med på. Denne målgruppen er	 de som trenger kalender og antageligvis de som kommer til å bruke siden mest.
   Den andre målgruppen er alle andre som er interesserte i naborevyen og å komme på revyforestillingene. Denne målgruppen trenger å vite informasjon om naborevyen generelt, informasjon om revyoppsetningene og hvordan revygruppen har jobbet opp mot de i gjennom semesteret. De trenger også å finne billettinformasjon her.
 </p>
 
 <h2>5.Innhold og organisering
 </h2>
 <p>
+  Naborevyen ønsker sider som rettes mot revy medlemmer og interesserte i revyen samt sider for de som er interessert i å se revyen. De ønsker en flat struktur, så det aller meste er tilgjengelig via startsiden. Dette gjør at de ønsker dette innholdet på siden:
+  En ryddig, tematisk og oversiktlig startside.
+  Skal lenke til de fleste andre sidene, gjør besøkende istand til å finne det meste av innholdet på siden direkte og oversiktlig.
+  En mulighet til å vise artikler og oppdatering på arrangementer som har vært og skal være.
+  En oversikt og forklaring over alle undergruppene og styret i revyen, med 1-2 avsnitt med tekst og 1-2 bilder fra gruppens aktivitet. Det er 10 undergrupper i revyen, fordeles enten i gruppevis eller med egne sider.
+  En interaktiv kalender, slik at revystyret kan legge inn eventer, og revy-deltagere og andre kan få en oversikt over aktiviteten i revyen.
+  En side med mulighet for påmelding til revyens undergrupper.
+  En side med lenke eller innebygd side for salg av billetter.
+  En side med lenke eller innebygd side for visning av tidligere revyer.
+  Et sted må kontaktinformasjon til revyen finnes.
+  Informasjonen på nettsiden skal om gjerne grupperes til informasjon som interne er interesserte i og det eksterne er interesserte i.
+
 </p>
 
 <h2>6. Funksjonelle og ikke funksjonelle krav
 </h2>
 <p>
+  Funksjonelle krav:
+  Man må kunne bestille billetter til revyen enten direkte eller indirekte gjennom hjemmesiden
+  Hjemmesiden skal kunne vise de tidligere årenes revy i videoformat
+  Hjemmesiden må ha mulighet for å vise interaktiv kalender (??)
+  Hjemmesiden må kunne redigeres innholdsmessig etter at prosjektet er ferdig
+  Hjemmesidens tema og farger må kunne endres etter at prosjektet er ferdig
+</p>
+<p>
+  Ikke-funksjonelle krav:
+  Flat struktur: en skal kunne komme seg til mesteparten av innholdet fra startsiden
+  Bruk revy-fargene, rødt og gult.
+  Revylogoen skal komme tydelig fram!
+  Logoene til eventuelle sponsorer og linjeforeningene bør kunne vises om ønskelig.
+  Hjemmesiden bør/skal, om mulig kunne kobles til sosiale media som instagram og facebook, den bør ihvertfall linke til disse.
 </p>
 
 <h2> 7.Avsluttende opplastning
 </h2>
 <p>
+  Siden skal lastes opp på Naboreyens eget domene, naborevyen.no, som betjenes av de.
+  Siden vil også “hostes” på NTNU sin server til prosjektet er vurdert.
 </p>
 
   </body>
