--- a/p1.html
+++ b/p1.html
@@ -86,7 +86,7 @@
 </h2>
 <p>
   Siden skal lastes opp på Naboreyens eget domene, naborevyen.no, som betjenes av de.
-  Siden vil også “hostes” på NTNU sin server til prosjektet er vurdert.
+  Siden vil også “hostes” på NTNU sin server til prosjektet er vurdert. Prosjektet vil kunne finnes på urlen: folk.ntnu.no/hkvie/ , med forbehold om endringer.
 </p>
 
   </body>
