Satt punktene i avsnitt 6 inn i en numerert liste. Og fjernet cursive fra stylesheetet så jeg slipper Comic Sans

--- a/p1.html
+++ b/p1.html
@@ -68,18 +68,23 @@
 <p>
   Funksjonelle krav:
   Man må kunne bestille billetter til revyen enten direkte eller indirekte gjennom hjemmesiden
-  Hjemmesiden skal kunne vise de tidligere årenes revy i videoformat
-  Hjemmesiden må ha mulighet for å vise interaktiv kalender (??)
-  Hjemmesiden må kunne redigeres innholdsmessig etter at prosjektet er ferdig
-  Hjemmesidens tema og farger må kunne endres etter at prosjektet er ferdig
+  <ol>
+    <li>Hjemmesiden skal kunne vise de tidligere årenes revy i videoformat</li>
+    <li>Hjemmesiden må ha mulighet for å vise en kalender som kan oppdateres eksternt</li>
+    <li>Hjemmesiden må kunne redigeres innholdsmessig etter at prosjektet er ferdig</li>
+    <li>Hjemmesidens tema og farger må kunne endres etter at prosjektet er ferdig</li>
+  </ol>
 </p>
 <p>
   Ikke-funksjonelle krav:
-  Flat struktur: en skal kunne komme seg til mesteparten av innholdet fra startsiden
-  Bruk revy-fargene, rødt og gult.
-  Revylogoen skal komme tydelig fram!
-  Logoene til eventuelle sponsorer og linjeforeningene bør kunne vises om ønskelig.
-  Hjemmesiden bør/skal, om mulig kunne kobles til sosiale media som instagram og facebook, den bør ihvertfall linke til disse.
+  <ol>
+    <li>Flat struktur: en skal kunne komme seg til mesteparten av innholdet fra startsiden</li>
+    <li>Bruk revy-fargene, rødt og gult.</li>
+    <li>Revylogoen skal komme tydelig fram!</li>
+    <li>Logoene til eventuelle sponsorer og linjeforeningene bør kunne vises om ønskelig.</li>
+    <li>Hjemmesiden bør/skal, om mulig kunne kobles til sosiale media som instagram og facebook, den bør ihvertfall linke til disse.</li>
+  </ol>
+
 </p>
 
 <h2> 7.Avsluttende opplastning
