5 er nå en liste

--- a/p1.html
+++ b/p1.html
@@ -50,16 +50,18 @@
 </h2>
 <p>
   Naborevyen ønsker sider som rettes mot revy medlemmer og interesserte i revyen samt sider for de som er interessert i å se revyen. De ønsker en flat struktur, så det aller meste er tilgjengelig via startsiden. Dette gjør at de ønsker dette innholdet på siden:
-  En ryddig, tematisk og oversiktlig startside.
-  Skal lenke til de fleste andre sidene, gjør besøkende istand til å finne det meste av innholdet på siden direkte og oversiktlig.
-  En mulighet til å vise artikler og oppdatering på arrangementer som har vært og skal være.
-  En oversikt og forklaring over alle undergruppene og styret i revyen, med 1-2 avsnitt med tekst og 1-2 bilder fra gruppens aktivitet. Det er 10 undergrupper i revyen, fordeles enten i gruppevis eller med egne sider.
-  En interaktiv kalender, slik at revystyret kan legge inn eventer, og revy-deltagere og andre kan få en oversikt over aktiviteten i revyen.
-  En side med mulighet for påmelding til revyens undergrupper.
-  En side med lenke eller innebygd side for salg av billetter.
-  En side med lenke eller innebygd side for visning av tidligere revyer.
-  Et sted må kontaktinformasjon til revyen finnes.
-  Informasjonen på nettsiden skal om gjerne grupperes til informasjon som interne er interesserte i og det eksterne er interesserte i.
+  <ol>
+    <li>En ryddig, tematisk og oversiktlig startside.</li>
+    <li>Skal lenke til de fleste andre sidene, gjør besøkende istand til å finne det meste av innholdet på siden direkte og oversiktlig.</li>
+    <li>En mulighet til å vise artikler og oppdatering på arrangementer som har vært og skal være.</li>
+    <li>En oversikt og forklaring over alle undergruppene og styret i revyen, med 1-2 avsnitt med tekst og 1-2 bilder fra gruppens aktivitet. Det er 10 undergrupper i revyen, fordeles enten i gruppevis eller med egne sider.</li>
+    <li>En interaktiv kalender, slik at revystyret kan legge inn eventer, og revy-deltagere og andre kan få en oversikt over aktiviteten i revyen.</li>
+    <li>En side med mulighet for påmelding til revyens undergrupper.</li>
+    <li>En side med lenke eller innebygd side for salg av billetter.</li>
+    <li>En side med lenke eller innebygd side for visning av tidligere revyer.</li>
+    <li>Et sted må kontaktinformasjon til revyen finnes.</li>
+    <li>Informasjonen på nettsiden skal om gjerne grupperes til informasjon som interne er interesserte i og det eksterne er interesserte i.</li>
+  </ol>
 
 </p>
 
