--- a/p1.html
+++ b/p1.html
@@ -69,8 +69,8 @@
 </h2>
 <p>
   Funksjonelle krav:
-  Man må kunne bestille billetter til revyen enten direkte eller indirekte gjennom hjemmesiden
   <ol>
+    <li>Man må kunne bestille billetter til revyen enten direkte eller indirekte gjennom hjemmesiden</li>
     <li>Hjemmesiden skal kunne vise de tidligere årenes revy i videoformat</li>
     <li>Hjemmesiden må ha mulighet for å vise en kalender som kan oppdateres eksternt</li>
     <li>Hjemmesiden må kunne redigeres innholdsmessig etter at prosjektet er ferdig</li>
