Fjernet nummerene før avsnittene

--- a/p1.html
+++ b/p1.html
@@ -19,7 +19,7 @@
 
     <!--Kake-->
 <h2>
-  2. Administratitive detaljer
+  Administratitive detaljer
 </h2>
 <p>
   Klient: Jonas Eide, PR-sjef i Naborevyen.
@@ -28,7 +28,7 @@
 </p>
 
 <h2>
-  3. Formål og mål
+  Formål og mål
 </h2>
 <p>
   Sidens formål er å gi Naborevyen sin egen offisielle nettside hvor de kan gi ut informasjon og promotere seg selv på.
@@ -38,7 +38,7 @@
 </p>
 
 <h2>
-  4. Målgruppe
+  Målgruppe
 </h2>
 <p>
   Målgruppen for nettsiden er todelt, men vil bestå av alle de som er interesserte i Naborevyen og hva revyen gjør.
@@ -46,7 +46,7 @@
   Den andre målgruppen er alle andre som er interesserte i naborevyen og å komme på revyforestillingene. Denne målgruppen trenger å vite informasjon om naborevyen generelt, informasjon om revyoppsetningene og hvordan revygruppen har jobbet opp mot de i gjennom semesteret. De trenger også å finne billettinformasjon her.
 </p>
 
-<h2>5. Innhold og organisering
+<h2>Innhold og organisering
 </h2>
 <p>
   Naborevyen ønsker sider som rettes mot revy medlemmer og interesserte i revyen samt sider for de som er interessert i å se revyen. De ønsker en flat struktur, så det aller meste er tilgjengelig via startsiden. Dette gjør at de ønsker dette innholdet på siden:
@@ -65,7 +65,7 @@
 
 </p>
 
-<h2>6. Funksjonelle og ikke funksjonelle krav
+<h2>Funksjonelle og ikke funksjonelle krav
 </h2>
 <p>
   Funksjonelle krav:
@@ -89,7 +89,7 @@
 
 </p>
 
-<h2> 7. Avsluttende opplastning
+<h2>Avsluttende opplastning
 </h2>
 <p>
   Siden skal lastes opp på Naboreyens eget domene, naborevyen.no, som betjenes av de.
