Fikset så listene kom på utsiden av p-elementene, og satt footeren inn i bodyen

--- a/p1.html
+++ b/p1.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" dir="ltr">
+<html lang="no" dir="ltr">
   <head>
     <meta charset="utf-8">
     <link rel="stylesheet" href="style.css">
@@ -50,44 +50,42 @@
 </h2>
 <p>
   Naborevyen ønsker sider som rettes mot revy medlemmer og interesserte i revyen samt sider for de som er interessert i å se revyen. De ønsker en flat struktur, så det aller meste er tilgjengelig via startsiden. Dette gjør at de ønsker dette innholdet på siden:
-  <ol>
-    <li>En ryddig, tematisk og oversiktlig startside.</li>
-    <li>Skal lenke til de fleste andre sidene, gjør besøkende istand til å finne det meste av innholdet på siden direkte og oversiktlig.</li>
-    <li>En mulighet til å vise artikler og oppdatering på arrangementer som har vært og skal være.</li>
-    <li>En oversikt og forklaring over alle undergruppene og styret i revyen, med 1-2 avsnitt med tekst og 1-2 bilder fra gruppens aktivitet. Det er 10 undergrupper i revyen, fordeles enten i gruppevis eller med egne sider.</li>
-    <li>En interaktiv kalender, slik at revystyret kan legge inn eventer, og revy-deltagere og andre kan få en oversikt over aktiviteten i revyen.</li>
-    <li>En side med mulighet for påmelding til revyens undergrupper.</li>
-    <li>En side med lenke eller innebygd side for salg av billetter.</li>
-    <li>En side med lenke eller innebygd side for visning av tidligere revyer.</li>
-    <li>Et sted må kontaktinformasjon til revyen finnes.</li>
-    <li>Informasjonen på nettsiden skal om gjerne grupperes til informasjon som interne er interesserte i og det eksterne er interesserte i.</li>
-  </ol>
-
 </p>
+<ol>
+  <li>En ryddig, tematisk og oversiktlig startside.</li>
+  <li>Skal lenke til de fleste andre sidene, gjør besøkende istand til å finne det meste av innholdet på siden direkte og oversiktlig.</li>
+  <li>En mulighet til å vise artikler og oppdatering på arrangementer som har vært og skal være.</li>
+  <li>En oversikt og forklaring over alle undergruppene og styret i revyen, med 1-2 avsnitt med tekst og 1-2 bilder fra gruppens aktivitet. Det er 10 undergrupper i revyen, fordeles enten i gruppevis eller med egne sider.</li>
+  <li>En interaktiv kalender, slik at revystyret kan legge inn eventer, og revy-deltagere og andre kan få en oversikt over aktiviteten i revyen.</li>
+  <li>En side med mulighet for påmelding til revyens undergrupper.</li>
+  <li>En side med lenke eller innebygd side for salg av billetter.</li>
+  <li>En side med lenke eller innebygd side for visning av tidligere revyer.</li>
+  <li>Et sted må kontaktinformasjon til revyen finnes.</li>
+  <li>Informasjonen på nettsiden skal om gjerne grupperes til informasjon som interne er interesserte i og det eksterne er interesserte i.</li>
+</ol>
 
 <h2>Funksjonelle og ikke funksjonelle krav
 </h2>
 <p>
   Funksjonelle krav:
-  <ol>
-    <li>Man må kunne bestille billetter til revyen enten direkte eller indirekte gjennom hjemmesiden</li>
-    <li>Hjemmesiden skal kunne vise de tidligere årenes revy i videoformat</li>
-    <li>Hjemmesiden må ha mulighet for å vise en kalender som kan oppdateres eksternt</li>
-    <li>Hjemmesiden må kunne redigeres innholdsmessig etter at prosjektet er ferdig</li>
-    <li>Hjemmesidens tema og farger må kunne endres etter at prosjektet er ferdig</li>
-  </ol>
 </p>
+<ol>
+  <li>Man må kunne bestille billetter til revyen enten direkte eller indirekte gjennom hjemmesiden</li>
+  <li>Hjemmesiden skal kunne vise de tidligere årenes revy i videoformat</li>
+  <li>Hjemmesiden må ha mulighet for å vise en kalender som kan oppdateres eksternt</li>
+  <li>Hjemmesiden må kunne redigeres innholdsmessig etter at prosjektet er ferdig</li>
+  <li>Hjemmesidens tema og farger må kunne endres etter at prosjektet er ferdig</li>
+</ol>
 <p>
   Ikke-funksjonelle krav:
-  <ol>
-    <li>Flat struktur: en skal kunne komme seg til mesteparten av innholdet fra startsiden</li>
-    <li>Bruk revy-fargene, rødt og gult.</li>
-    <li>Revylogoen skal komme tydelig fram!</li>
-    <li>Logoene til eventuelle sponsorer og linjeforeningene bør kunne vises om ønskelig.</li>
-    <li>Hjemmesiden bør/skal, om mulig kunne kobles til sosiale media som instagram og facebook, den bør ihvertfall linke til disse.</li>
-  </ol>
-
 </p>
+<ol>
+  <li>Flat struktur: en skal kunne komme seg til mesteparten av innholdet fra startsiden</li>
+  <li>Bruk revy-fargene, rødt og gult.</li>
+  <li>Revylogoen skal komme tydelig fram!</li>
+  <li>Logoene til eventuelle sponsorer og linjeforeningene bør kunne vises om ønskelig.</li>
+  <li>Hjemmesiden bør/skal, om mulig kunne kobles til sosiale media som instagram og facebook, den bør ihvertfall linke til disse.</li>
+</ol>
 
 <h2>Avsluttende opplastning
 </h2>
@@ -96,8 +94,8 @@
   Siden vil også “hostes” på NTNU sin server til prosjektet er vurdert. Prosjektet vil kunne finnes på urlen: folk.ntnu.no/hkvie/ , med forbehold om endringer.
 </p>
 
-  </body>
   <footer>
     Denne siden er laget av David, Eskild, Hans Kristian og Sander
   </footer>
+  </body>
 </html>
