Ladge grov dokumentstruktur

--- a/P2/P2_design_37.html
+++ b/P2/P2_design_37.html
@@ -27,5 +27,40 @@
        Første punkt er å gi en følelse av profesjonalitet til Naborevyen, for eksempel, i situasjoner hvor de ønsker at relevante partier skal se på revyen som et seriøst foretak av studenter kan det å ha en egen nettside være en fordel, som et bevis på legitimiteten.
        Andre punkt er å tilby en side hvor ethvert interessert parti kan finne all relevant informasjon om Naborevyen, som kontaktinformasjon til nøkkelpersoner, beskrivelser av gruppene i revyen, link til påmelding og viktige datoer å holde av. Tredje punkt er gi muligheten for Naborevyen å selv i større grad kontrollere hvordan de presenterer seg selv, f.eks. i farger, logoer og kalender, og å gi en mer oversiktelig måte å presentere dette enn hva Facebook tillater.
     </p>
+
+    <h2>
+      (4) Navigasjonsstruktur
+    </h2>
+    <p>
+
+    </p>
+
+    <h2>
+      (5) Side-layout og utforming
+    </h2>
+    <p>
+
+    </p>
+
+    <h2>
+      (6) Innhold
+    </h2>
+    <p>
+
+    </p>
+
+    <h2>
+      (7) Minimumskrav (JavaScript)
+    </h2>
+    <p>
+
+    </p>
+
+    <h2>
+      (8) Plan
+    </h2>
+    <p>
+
+    </p>
   </body>
 </html>
