La in dårlig link til plan docs

--- a/P2/P2_design_37.html
+++ b/P2/P2_design_37.html
@@ -60,7 +60,7 @@
       (8) Plan
     </h2>
     <p>
-
+      plan finnes på denne linken: https://docs.google.com/document/d/15phH-H2AjZ0nKw1TtMlU40i1hhGInlnitEd0roJW4L8/edit?usp=sharing
     </p>
   </body>
 </html>
