La til undergrupper og litt info om noen av sidene i avsnitt 6.

--- a/P2/P2_design_37.html
+++ b/P2/P2_design_37.html
@@ -45,6 +45,30 @@
     <h2>
       (6) Innhold
     </h2>
+    <h4>Undergrupper</h4>
+    <p>
+      Dette er en side som linker videre til sidene med de 11 spesifikke undergruppene.
+      På denne siden skal det være et bilde og en tittel til hver undergruppene,
+      og både bilde og tittelen skal være hyperlinker til disse sidene.
+      Man skal ikke trenge å besøke denne siden for å komme til undergruppene,
+      men det skal være mulig å besøke den for å få litt mer generell info før man besøker siden til en spesifikk undergruppe.
+    </p>
+    <h4>Undergruppe: Syret</h4>
+    <p>
+      Denne siden har info om undergruppen "revystyret".
+      Dette inkluderer styremedlemmer med titler, bilde av styremedlemmene,
+      og info om når styremedlemmene ble valgt og hvor lenge de er valgt inn i styret for.
+    </p>
+    <h4>Undergruppe: Skuespillere</h4>
+    <h4>Undergruppe: Byggruppa</h4>
+    <h4>Undergruppe: Kostyme og rekvisitter</h4>
+    <h4>Undergruppe: Dansegruppa</h4>
+    <h4>Undergruppe: Musikk- og band</h4>
+    <h4>Undergruppe: PR og Design</h4>
+    <h4>Undergruppe: Velferd</h4>
+    <h4>Undergruppe: Skribentgruppa</h4>
+    <h4>Undergruppe: Økonomi</h4>
+    <h4>Undergruppe: Teknikk</h4>
     <p>
 
     </p>
