--- a/P2/P2_design_37.html
+++ b/P2/P2_design_37.html
@@ -39,8 +39,23 @@
       (5) Side-layout og utforming
     </h2>
     <p>
+      *Tekst om hvorfor den universelle utformingen er som den er*
 
+      De spesifikke stilene som kommer til å gjelde for alle sidene er som
+      følgende:
     </p>
+    <ul>
+      <li>Font: Helvetica, ...</li>
+      <li>Farger</li>
+      <li><ul>
+        <li>Tekst: Svart</li>
+        <li>Bakgrunn: Hvit (med forbehold om endringer)</li>
+        <li>Lenker i avsnitt: Blå</li>
+        <li>Header og footer: Rød bakgrunn #a01405, gule aksenter #ffce46.
+          Dette er fargene som er brukt på logoen.</li>
+        <li></li>
+      </ul></li>
+    </ul>
 
     <h2>
       (6) Innhold
