--- a/P2/P2_design_37.html
+++ b/P2/P2_design_37.html
@@ -32,7 +32,17 @@
       (4) Navigasjonsstruktur
     </h2>
     <p>
-
+      Navigasjonsstrukturen til siden kommer til å være hierarkisk,
+      da et av ønskene til kunden var at de skulle kunne nå så mange avv sidene som mulig på så få klikk som mulig.
+      Vi har en startside som du kommer til når du skriver in webadressen til nettsiden,
+      og du kan komme tilbake til startsiden ved å trykke på logoen til kunden.
+      Siden vil ha en navigasjonsbar som alltid ligger langs toppen av siden, så du kan alltid navigere fra enhver side, til enhver side.
+      Navigasjonsbaren vil linke til noen hovedundersider, og noen av disse vil igjen linke til flere undersider.
+      Du kan komme deg til undersidene enten ved å trykke på linken til hovedsiden, og deretter trykke på linken til undersiden,
+      eller du kan gå direkte til undersiden ved å la musen sveve over linken til hovedundersiden,
+      og deretter trykke på linken til undersiden som da dukker opp. Siden vil i tillegg til en navigasjonsbar,
+      også ha en footer som er felles for alle sidene på hjemmesiden, og viser kontaktinformasjon til kunden.
+      Logoen til kunden vil også alltid vises øverst i venstre hjørne, så man kan alltid komme seg tilbake til startsiden.
     </p>
 
     <h2>
