Fikset litt til på tekstlengder

--- a/P2/P2_design_37.html
+++ b/P2/P2_design_37.html
@@ -14,20 +14,23 @@
     </h2>
     <p>
       Klient: Jonas Eide, PR-sjef i Naborevyen.
-      Naborevyen er en studentrevy som hvert år arrangeres av Spanskrøret og Timini, linjeforeningene til Lektorutdanning med Realfag og Nanoteknologi henholdsvis.
-      Styret i Naborevyen ønsker en nettside de kan bruke til promotering og informasjonsflyt for interesserte partier og interne medlemmer.
-      PR-sjefen har blitt satt opp med ansvaret for å være vår primære klient, ettersom vårt prosjekt går innenfor hans arbeid med promotering av revyen.
+      Naborevyen er en studentrevy som hvert år arrangeres av Spanskrøret og Timini,
+      linjeforeningene til Lektorutdanning med Realfag og Nanoteknologi henholdsvis.
+      Styret i Naborevyen ønsker en nettside de kan bruke til promotering og informasjonsflyt
+      for interesserte partier og interne medlemmer.
+      PR-sjefen har blitt satt opp med ansvaret for å være vår primære klient, ettersom vårt
+      prosjekt går innenfor hans arbeid med promotering av revyen.
     </p>
 
     <h2>
       (3) Formål og mål
     </h2>
     <p>
-       Sidens formål er å gi Naborevyen sin egen offisielle nettside hvor de kan gi ut informasjon og promotere seg selv på.
-       Målet med denne siden er 3-delt.
+       Sidens formål er å gi Naborevyen sin egen offisielle nettside hvor de kan gi ut informasjon
+       og promotere seg selv på. Målet med denne siden er 3-delt.
        Første punkt er å gi en følelse av profesjonalitet til Naborevyen.
-       For eksempel, i situasjoner hvor de ønsker at relevante partier skal se på revyen som et seriøst foretak av studenter kan det å ha en egen nettside være en fordel,
-       som et bevis på legitimiteten.
+       For eksempel, i situasjoner hvor de ønsker at relevante partier skal se på revyen som et
+       seriøst foretak av studenter kan det å ha en egen nettside være en fordel, som et bevis på legitimiteten.
        Andre punkt er å tilby en side hvor ethvert interessert parti kan finne all relevant informasjon om Naborevyen,
        som kontaktinformasjon til nøkkelpersoner, beskrivelser av gruppene i revyen, link til påmelding og viktige datoer å holde av.
        Tredje punkt er gi muligheten for Naborevyen å selv i større grad kontrollere hvordan de presenterer seg selv,
