lagt til info om logo til startsiden

--- a/P2/P2_design_37.html
+++ b/P2/P2_design_37.html
@@ -51,7 +51,8 @@
       eller du kan gå direkte til undersiden ved å la musen sveve over linken til hovedundersiden,
       og deretter trykke på linken til undersiden som da dukker opp. Siden vil i tillegg til en navigasjonsbar,
       også ha en footer som er felles for alle sidene på hjemmesiden, og viser kontaktinformasjon til kunden.
-      Logoen til kunden vil også alltid vises øverst i venstre hjørne, så man kan alltid komme seg tilbake til startsiden.
+      Logoen til kunden vil også alltid vises øverst i venstre hjørne, så man kan klikke på den
+      og alltid komme seg tilbake til startsiden.
     </p>
 
     <h2>
