Fikset beskrivelsen på punkt 4.

--- a/P2/P2_design_37.html
+++ b/P2/P2_design_37.html
@@ -7,7 +7,7 @@
   </head>
   <body>
     <h1>(1) P2 Design</h1>
-    <h3>En nettside av David, Eskild, Hans Kristian og Sander</h3>
+    <h3>Nettside til Naborevyen, av David, Eskild, Hans Kristian og Sander</h3>
     <h4>25.09.2019</h4>
     <h2>
       (2) Administratitive detaljer
@@ -17,7 +17,7 @@
       Naborevyen er en studentrevy som hvert år arrangeres av Spanskrøret og Timini,
       linjeforeningene til Lektorutdanning med Realfag og Nanoteknologi henholdsvis.
       Styret i Naborevyen ønsker en nettside de kan bruke til promotering og informasjonsflyt
-      for interesserte partier og interne medlemmer.
+      for interesserte personer og interne medlemmer.
       PR-sjefen har blitt satt opp med ansvaret for å være vår primære klient, ettersom vårt
       prosjekt går innenfor hans arbeid med promotering av revyen.
     </p>
@@ -27,14 +27,16 @@
     </h2>
     <p>
        Sidens formål er å gi Naborevyen sin egen offisielle nettside hvor de kan gi ut informasjon
-       og promotere seg selv på. Målet med denne siden er 3-delt.
-       Første punkt er å gi en følelse av profesjonalitet til Naborevyen.
-       For eksempel, i situasjoner hvor de ønsker at relevante partier skal se på revyen som et
-       seriøst foretak av studenter kan det å ha en egen nettside være en fordel, som et bevis på legitimiteten.
-       Andre punkt er å tilby en side hvor ethvert interessert parti kan finne all relevant informasjon om Naborevyen,
-       som kontaktinformasjon til nøkkelpersoner, beskrivelser av gruppene i revyen, link til påmelding og viktige datoer å holde av.
-       Tredje punkt er gi muligheten for Naborevyen å selv i større grad kontrollere hvordan de presenterer seg selv,
-       f.eks. i farger, logoer og kalender, og å gi en mer oversiktelig måte å presentere dette enn hva Facebook tillater.
+       gjennom og til promotere seg selv på. Målet med denne siden er 3-delt.
+       Første punkt er å gi en profesjonalitet til Naborevyen som en seriøs organisasjon.
+       I situasjoner hvor de ønsker at relevante partier skal se på revyen som et reelt foretak av
+       studenter kan det å ha en egen nettside være en fordel, som et slags bevis på legitimiteten.
+       Andre punkt er å tilby en side hvor enhver interessert kan finne all relevant informasjon
+       om Naborevyen, som kontaktinformasjon til nøkkelpersoner, beskrivelser av gruppene i revyen,
+       link til påmelding og viktige datoer å holde av.
+       Tredje punkt er gi muligheten til Naborevyen å i en større grad enn før kontrollere hvordan
+       de presenterer seg selv, som i fargepaletten på siden, og en ryddig struktur for relevante
+       kalenderdatoer og bilder/videoer fra tidligere revyer.
     </p>
 
     <h2>
