Lagt til en del ting under 6:Innhold, og endret språket fra en til nb-no

--- a/P2/P2_design_37.html
+++ b/P2/P2_design_37.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" dir="ltr">
+<html lang="nb-no" dir="ltr">
   <head>
     <meta charset="utf-8">
     <link rel="stylesheet" href="style.css">
@@ -70,34 +70,96 @@
     <h2>
       (6) Innhold
     </h2>
-    <h4>Undergrupper</h4>
+    <h3>Undergrupper</h3>
     <p>
       Dette er en side som linker videre til sidene med de 11 spesifikke undergruppene.
       På denne siden skal det være et bilde og en tittel til hver undergruppene,
-      og både bilde og tittelen skal være hyperlinker til disse sidene.
+      og både bildene og tittelene skal være hyperlinker til disse sidene.
       Man skal ikke trenge å besøke denne siden for å komme til undergruppene,
-      men det skal være mulig å besøke den for å få litt mer generell info før man besøker siden til en spesifikk undergruppe.
+      men det skal være mulig å besøke den for å få litt mer generell info om hver
+      gruppe før man besøker siden til en spesifikk undergruppe.
     </p>
     <h4>Undergruppe: Syret</h4>
     <p>
-      Denne siden har info om undergruppen "revystyret".
+      Denne siden har info om undergruppen "Revystyret".
       Dette inkluderer styremedlemmer med titler, bilde av styremedlemmene,
       og info om når styremedlemmene ble valgt og hvor lenge de er valgt inn i styret for.
     </p>
     <h4>Undergruppe: Skuespillere</h4>
+    <p>
+      Denne siden har info om undergruppen "Skuespillere".
+      Dette inkluderer et bilde av gruppelederen, et gruppebilde eller enkeltbilder av skuespillerne,
+      og navn på alle medlemmene i undergruppen, eventuelt med en kort beskrivelse.
+    </p>
     <h4>Undergruppe: Byggruppa</h4>
+    <p>
+      Denne siden har info om undergruppen "Byggruppa".
+      Dette inkluderer et bilde av gruppelederen, et gruppebilde eller enkeltbilder av gruppemedlemmene,
+      og navn på alle medlemmene i undergruppen, eventuelt med en kort beskrivelse.
+    </p>
     <h4>Undergruppe: Kostyme og rekvisitter</h4>
+    <p>
+      Denne siden har info om undergruppen "Kostyme og rekvisitter".
+      Dette inkluderer et bilde av gruppelederen, et gruppebilde eller enkeltbilder av gruppemedlemmene,
+      og navn på alle medlemmene i undergruppen, eventuelt med en kort beskrivelse.
+    </p>
     <h4>Undergruppe: Dansegruppa</h4>
+    <p>
+      Denne siden har info om undergruppen "Dansegruppa".
+      Dette inkluderer et bilde av gruppelederen, et gruppebilde eller enkeltbilder av gruppemedlemmene,
+      og navn på alle medlemmene i undergruppen, eventuelt med en kort beskrivelse.
+    </p>
     <h4>Undergruppe: Musikk- og band</h4>
-    <h4>Undergruppe: PR og Design</h4>
+    <p>
+      Denne siden har info om undergruppen "Musikk- og band".
+      Dette inkluderer et bilde av gruppelederen, et gruppebilde eller enkeltbilder av gruppemedlemmene,
+      og navn på alle medlemmene i undergruppen, eventuelt med en kort beskrivelse.
+    </p>
+    <h4>Undergruppe: PR og design</h4>
+    <p>
+      Denne siden har info om undergruppen "PR og design".
+      Dette inkluderer et bilde av gruppelederen, et gruppebilde eller enkeltbilder av gruppemedlemmene,
+      og navn på alle medlemmene i undergruppen, eventuelt med en kort beskrivelse.
+    </p>
     <h4>Undergruppe: Velferd</h4>
+    <p>
+      Denne siden har info om undergruppen "Velferd".
+      Dette inkluderer et bilde av gruppelederen, et gruppebilde eller enkeltbilder av gruppemedlemmene,
+      og navn på alle medlemmene i undergruppen, eventuelt med en kort beskrivelse.
+    </p>
     <h4>Undergruppe: Skribentgruppa</h4>
+    <p>
+      Denne siden har info om undergruppen "Skribentgruppa".
+      Dette inkluderer et bilde av gruppelederen, et gruppebilde eller enkeltbilder av gruppemedlemmene,
+      og navn på alle medlemmene i undergruppen, eventuelt med en kort beskrivelse.
+    </p>
     <h4>Undergruppe: Økonomi</h4>
+    <p>
+      Denne siden har info om undergruppen "Økonomi".
+      Dette inkluderer et bilde av gruppelederen, et gruppebilde eller enkeltbilder av gruppemedlemmene,
+      og navn på alle medlemmene i undergruppen, eventuelt med en kort beskrivelse.
+    </p>
     <h4>Undergruppe: Teknikk</h4>
     <p>
-
+      Denne siden har info om undergruppen "Teknikk".
+      Dette inkluderer et bilde av gruppelederen, et gruppebilde eller enkeltbilder av gruppemedlemmene,
+      og navn på alle medlemmene i undergruppen, eventuelt med en kort beskrivelse.
     </p>
 
+    <h3>Om oss</h3>
+    <p>
+      Om oss-siden skal informere om hva og hvem Naborevyen er. Der skal det stå generell info om Naborevyen,
+      som når den ble startet, hvem som er med å arrangerer den, når den arrangeres og hva som er årets tema.
+      Det kan også være noen bilder fra tidligere revyer som viser litt av hva som har skjedd på tidligere revyer.
+    </p>
+
+    <h3>Billettsalg</h3>
+    <p>
+      Denne siden skal brukes til å selge billetter til Naborevyen. Naborevyen bruker TicketCo til å selge billetter,
+      så vi ønsker helst å implementere TicketCo-siden til Naborevyen ved å bruke APIen til TicketCo.
+      Hvis dette ikke lar seg gjøre eller er i strid med prosjektkravene,
+      kommer linken til denne siden heller til å linke direkte til TicketCo-siden, og denne siden vil ikke eksistere.
+    </p>
     <h2>
       (7) Minimumskrav (JavaScript)
     </h2>
