--- a/P2/P2_design_37.html
+++ b/P2/P2_design_37.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="nb-no" dir="ltr">
+<html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
     <link rel="stylesheet" href="style.css">
@@ -7,7 +7,7 @@
   </head>
   <body>
     <h1>(1) P2 Design</h1>
-    <h3>Nettside til Naborevyen, av David, Eskild, Hans Kristian og Sander</h3>
+    <h3>En nettside av David, Eskild, Hans Kristian og Sander</h3>
     <h4>25.09.2019</h4>
     <h2>
       (2) Administratitive detaljer
@@ -17,7 +17,7 @@
       Naborevyen er en studentrevy som hvert år arrangeres av Spanskrøret og Timini,
       linjeforeningene til Lektorutdanning med Realfag og Nanoteknologi henholdsvis.
       Styret i Naborevyen ønsker en nettside de kan bruke til promotering og informasjonsflyt
-      for interesserte personer og interne medlemmer.
+      for interesserte partier og interne medlemmer.
       PR-sjefen har blitt satt opp med ansvaret for å være vår primære klient, ettersom vårt
       prosjekt går innenfor hans arbeid med promotering av revyen.
     </p>
@@ -27,16 +27,14 @@
     </h2>
     <p>
        Sidens formål er å gi Naborevyen sin egen offisielle nettside hvor de kan gi ut informasjon
-       gjennom og til promotere seg selv på. Målet med denne siden er 3-delt.
-       Første punkt er å gi en profesjonalitet til Naborevyen som en seriøs organisasjon.
-       I situasjoner hvor de ønsker at relevante partier skal se på revyen som et reelt foretak av
-       studenter kan det å ha en egen nettside være en fordel, som et slags bevis på legitimiteten.
-       Andre punkt er å tilby en side hvor enhver interessert kan finne all relevant informasjon
-       om Naborevyen, som kontaktinformasjon til nøkkelpersoner, beskrivelser av gruppene i revyen,
-       link til påmelding og viktige datoer å holde av.
-       Tredje punkt er gi muligheten til Naborevyen å i en større grad enn før kontrollere hvordan
-       de presenterer seg selv, som i fargepaletten på siden, og en ryddig struktur for relevante
-       kalenderdatoer og bilder/videoer fra tidligere revyer.
+       og promotere seg selv på. Målet med denne siden er 3-delt.
+       Første punkt er å gi en følelse av profesjonalitet til Naborevyen.
+       For eksempel, i situasjoner hvor de ønsker at relevante partier skal se på revyen som et
+       seriøst foretak av studenter kan det å ha en egen nettside være en fordel, som et bevis på legitimiteten.
+       Andre punkt er å tilby en side hvor ethvert interessert parti kan finne all relevant informasjon om Naborevyen,
+       som kontaktinformasjon til nøkkelpersoner, beskrivelser av gruppene i revyen, link til påmelding og viktige datoer å holde av.
+       Tredje punkt er gi muligheten for Naborevyen å selv i større grad kontrollere hvordan de presenterer seg selv,
+       f.eks. i farger, logoer og kalender, og å gi en mer oversiktelig måte å presentere dette enn hva Facebook tillater.
     </p>
 
     <h2>
@@ -53,15 +51,19 @@
       eller du kan gå direkte til undersiden ved å la musen sveve over linken til hovedundersiden,
       og deretter trykke på linken til undersiden som da dukker opp. Siden vil i tillegg til en navigasjonsbar,
       også ha en footer som er felles for alle sidene på hjemmesiden, og viser kontaktinformasjon til kunden.
-      Logoen til kunden vil også alltid vises øverst i venstre hjørne, så man kan klikke på den
-      og alltid komme seg tilbake til startsiden.
+      Logoen til kunden vil også alltid vises øverst i venstre hjørne, så man kan alltid komme seg tilbake til startsiden.
     </p>
 
     <h2>
       (5) Side-layout og utforming
     </h2>
     <p>
-      *Tekst om hvorfor den universelle utformingen er som den er*
+      Designavgjørelsene ble tatt ut ifra det første møtet vi hadde med klienten.
+      Der kom de med spesifikke krav til farger, logo og navigasjonsstruktur. Ellers
+      fikk vi ganske stort spillerom med utformingen på siden. Det eneste kravet der var at det skulle
+      være lett å finne fram, og at strukturen på sidene skulle være ryddig. De var
+      veldig glad i hvordan siden til Spanskrøret var utformet, så vi har tatt en del inspirasjon
+      fra denne.
 
       De spesifikke stilene som kommer til å gjelde for alle sidene er som
       følgende:
@@ -73,105 +75,51 @@
         <li>Tekst: Svart</li>
         <li>Bakgrunn: Hvit (med forbehold om endringer)</li>
         <li>Lenker i avsnitt: Blå</li>
-        <li>Header og footer: Rød bakgrunn #a01405, gule aksenter #ffce46.
+        <li>Header: Hvit bakgrunn, logoen oppe i venstre hjørne, navigasjonbaren
+        blir høyrestilt på headeren</li>
+        <li>Footer: Rød bakgrunn #a01405, gule aksenter #ffce46.
           Dette er fargene som er brukt på logoen.</li>
-        <li></li>
+        <li>Navigasjonsbar: Knappene til de ulike undersidene endrer farge når
+        musepekeren svever over de, og blir den samme rødfargen som i logoen og footeren,
+        samtidig som teksten blir hvit. I tillegg hvis denne undersiden leder til
+        flere undersider vil lenker til disse dukke opp som en "rullegardin" av flere knapper
+        med samme farge og tekstfarge.</li>
+        <li>Banner: Et eller flere bilder på rundgang</li>
+        <li>Body max-bredde: 80%</li>
       </ul></li>
     </ul>
 
     <h2>
       (6) Innhold
     </h2>
-    <h3>Undergrupper</h3>
+    <h4>Undergrupper</h4>
     <p>
       Dette er en side som linker videre til sidene med de 11 spesifikke undergruppene.
       På denne siden skal det være et bilde og en tittel til hver undergruppene,
-      og både bildene og tittelene skal være hyperlinker til disse sidene.
+      og både bilde og tittelen skal være hyperlinker til disse sidene.
       Man skal ikke trenge å besøke denne siden for å komme til undergruppene,
-      men det skal være mulig å besøke den for å få litt mer generell info om hver
-      gruppe før man besøker siden til en spesifikk undergruppe.
+      men det skal være mulig å besøke den for å få litt mer generell info før man besøker siden til en spesifikk undergruppe.
     </p>
     <h4>Undergruppe: Syret</h4>
     <p>
-      Denne siden har info om undergruppen "Revystyret".
+      Denne siden har info om undergruppen "revystyret".
       Dette inkluderer styremedlemmer med titler, bilde av styremedlemmene,
       og info om når styremedlemmene ble valgt og hvor lenge de er valgt inn i styret for.
     </p>
     <h4>Undergruppe: Skuespillere</h4>
-    <p>
-      Denne siden har info om undergruppen "Skuespillere".
-      Dette inkluderer et bilde av gruppelederen, et gruppebilde eller enkeltbilder av skuespillerne,
-      og navn på alle medlemmene i undergruppen, eventuelt med en kort beskrivelse.
-    </p>
     <h4>Undergruppe: Byggruppa</h4>
-    <p>
-      Denne siden har info om undergruppen "Byggruppa".
-      Dette inkluderer et bilde av gruppelederen, et gruppebilde eller enkeltbilder av gruppemedlemmene,
-      og navn på alle medlemmene i undergruppen, eventuelt med en kort beskrivelse.
-    </p>
     <h4>Undergruppe: Kostyme og rekvisitter</h4>
-    <p>
-      Denne siden har info om undergruppen "Kostyme og rekvisitter".
-      Dette inkluderer et bilde av gruppelederen, et gruppebilde eller enkeltbilder av gruppemedlemmene,
-      og navn på alle medlemmene i undergruppen, eventuelt med en kort beskrivelse.
-    </p>
     <h4>Undergruppe: Dansegruppa</h4>
-    <p>
-      Denne siden har info om undergruppen "Dansegruppa".
-      Dette inkluderer et bilde av gruppelederen, et gruppebilde eller enkeltbilder av gruppemedlemmene,
-      og navn på alle medlemmene i undergruppen, eventuelt med en kort beskrivelse.
-    </p>
     <h4>Undergruppe: Musikk- og band</h4>
-    <p>
-      Denne siden har info om undergruppen "Musikk- og band".
-      Dette inkluderer et bilde av gruppelederen, et gruppebilde eller enkeltbilder av gruppemedlemmene,
-      og navn på alle medlemmene i undergruppen, eventuelt med en kort beskrivelse.
-    </p>
-    <h4>Undergruppe: PR og design</h4>
-    <p>
-      Denne siden har info om undergruppen "PR og design".
-      Dette inkluderer et bilde av gruppelederen, et gruppebilde eller enkeltbilder av gruppemedlemmene,
-      og navn på alle medlemmene i undergruppen, eventuelt med en kort beskrivelse.
-    </p>
+    <h4>Undergruppe: PR og Design</h4>
     <h4>Undergruppe: Velferd</h4>
-    <p>
-      Denne siden har info om undergruppen "Velferd".
-      Dette inkluderer et bilde av gruppelederen, et gruppebilde eller enkeltbilder av gruppemedlemmene,
-      og navn på alle medlemmene i undergruppen, eventuelt med en kort beskrivelse.
-    </p>
     <h4>Undergruppe: Skribentgruppa</h4>
-    <p>
-      Denne siden har info om undergruppen "Skribentgruppa".
-      Dette inkluderer et bilde av gruppelederen, et gruppebilde eller enkeltbilder av gruppemedlemmene,
-      og navn på alle medlemmene i undergruppen, eventuelt med en kort beskrivelse.
-    </p>
     <h4>Undergruppe: Økonomi</h4>
-    <p>
-      Denne siden har info om undergruppen "Økonomi".
-      Dette inkluderer et bilde av gruppelederen, et gruppebilde eller enkeltbilder av gruppemedlemmene,
-      og navn på alle medlemmene i undergruppen, eventuelt med en kort beskrivelse.
-    </p>
     <h4>Undergruppe: Teknikk</h4>
     <p>
-      Denne siden har info om undergruppen "Teknikk".
-      Dette inkluderer et bilde av gruppelederen, et gruppebilde eller enkeltbilder av gruppemedlemmene,
-      og navn på alle medlemmene i undergruppen, eventuelt med en kort beskrivelse.
+
     </p>
 
-    <h3>Om oss</h3>
-    <p>
-      Om oss-siden skal informere om hva og hvem Naborevyen er. Der skal det stå generell info om Naborevyen,
-      som når den ble startet, hvem som er med å arrangerer den, når den arrangeres og hva som er årets tema.
-      Det kan også være noen bilder fra tidligere revyer som viser litt av hva som har skjedd på tidligere revyer.
-    </p>
-
-    <h3>Billettsalg</h3>
-    <p>
-      Denne siden skal brukes til å selge billetter til Naborevyen. Naborevyen bruker TicketCo til å selge billetter,
-      så vi ønsker helst å implementere TicketCo-siden til Naborevyen ved å bruke APIen til TicketCo.
-      Hvis dette ikke lar seg gjøre eller er i strid med prosjektkravene,
-      kommer linken til denne siden heller til å linke direkte til TicketCo-siden, og denne siden vil ikke eksistere.
-    </p>
     <h2>
       (7) Minimumskrav (JavaScript)
     </h2>
