Listeelementer og sånn

--- a/P2/P2_design_37.html
+++ b/P2/P2_design_37.html
@@ -76,8 +76,8 @@
     </p>
     <ul>
       <li>Font: Helvetica, ...</li>
-      <li>Farger</li>
-      <li><ul>
+      <li>Farger
+      <ul>
         <li>Tekst: Svart</li>
         <li>Bakgrunn: Hvit (med forbehold om endringer)</li>
         <li>Lenker i avsnitt: Blå</li>
