Jobbet mer på 6:Innhold

--- a/P2/P2_design_37.html
+++ b/P2/P2_design_37.html
@@ -171,6 +171,13 @@
       så vi ønsker helst å implementere TicketCo-siden til Naborevyen ved å bruke APIen til TicketCo.
       Hvis dette ikke lar seg gjøre eller er i strid med prosjektkravene,
       kommer linken til denne siden heller til å linke direkte til TicketCo-siden, og denne siden vil ikke eksistere.
+      Det unike for denne siden er at vi må implementere en API, og dette blir derfor den mest interaktive siden på hjemmesiden.
+    </p>
+
+    <h3>Påmelding</h3>
+    <p>
+      Denne siden skal brukes til påmelding til de forskjellige undergruppene.
+      Siden vi ikke har mulighet til å bruke databaser, tenker vi å 
     </p>
     <h2>
       (7) Minimumskrav (JavaScript)
